rem - prop version, upd - homepage
the prop `version` will be automatically filled by bower using git tags

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,6 @@
 {
   "name": "lucca-icons",
-  "version": "1.1.5",
-  "homepage": "https://lucccsa.github.io/lucca-icons",
+  "homepage": "http://luccasa.github.io/lucca-ui/#/icons",
   "authors": [
     "Léa Mendes <lmendes@lucca.fr>",
     "Clotilde Martin-Lemerle <clot@lucca.fr>",
