--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-less": "^1.0.1",
-	"grunt-sass": "^1.1.0",
-	"grunt-contrib-sass": "^0.9.2",
+    "grunt-sass": "^1.1.0",
+    "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1"
   },
   "author": "Lucca",
-  "license": "ISC"
+  "license": "MIT"
 }
