--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Lucca-icons",
-  "version": "1.0.0",
+  "name": "lucca-icons",
+  "version": "1.1.22",
   "description": "Icon font by lucca",
   "main": "Gruntfile.js",
   "devDependencies": {
